# pureNES

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  apu.c  apu.h  cartridge.c  cartridge.h  controller.c  controller.h  cpu.c  cpu.h  game.c  game.h  main.c  mapper.c  mapper.h  memory.c  memory.h  nes.c  nes.h  ppu.c  ppu.h  renderer.c  renderer.h  rom.c  rom.h
src/controllers/: CMakeLists.txt  keyboard.c  keyboard.h
src/core/: CMakeLists.txt  apu.c  apu.h  cartridge.c  cartridge.h  controller.c  controller.h  cpu.c  cpu.h  main.c.old  mappers.h  memory.c  nes.c  nes.h  ppu.c  ppu.h
src/core/mappers/: CMakeLists.txt  cnrom.c  mapper.c  nrom.c  uxrom.c
src/mappers/: cnrom.c  mapper.c  mapper.h  mmc1.c  nrom.c  uxrom.c
src/ui/: CMakeLists.txt  Canvas.cpp  Canvas.h  EmuApp.cpp  EmuApp.h  EmuFrame.cpp  EmuFrame.h  EmulationThread.cpp  EmulationThread.h
